# .dotfiles

./: .gitignore  .pdm-python  .pdm.toml  Pipfile  config.yaml  dotdrop.sh  pyproject.toml  spark.sus
desktop/fish/: env.fish
desktop/i3blocks/: config
dotfiles/alacritty/: alacritty.yml
dotfiles/fish/: 00_brew.fish  05_cargo.fish  06_krew.fish  10_depot_tools.fish  20_local_bin.fish  21_mise.fish  40_pdm.fish  80_ssh_agent.fish  90_base16.fish  95_sway_java.fish  config.fish  env_desktop.fish  env_laptop.fish
dotfiles/i3/: config_desktop  config_laptop
dotfiles/i3blocks/: config_desktop  config_laptop
dotfiles/nvim/: init.vim
dotfiles/rofi/: config  config.rasi
dotfiles/sway/: config
dotfiles/termite/: config
dotfiles/tmux/: tmux.conf
fish/: config.fish
fish/functions/: damn.fish  super-vpn.fish
labs/fish/: env.fish  powerline.fish
labs/i3/: config
labs/vim/: powerline.rc
laptop/fish/: env.fish  fish-vi.fish  powerline.fish
laptop/i3blocks/: config
laptop/tmux/: powerline.conf
powerline/themes/wm/: default.json
shared/dunst/: dunstrc
shared/fish/: config.fish  env.fish
shared/fish/functions/: fzf_key_bindings.fish  mini-vpn.fish  updatevim.fish
shared/i3/: config
shared/i3blocks/: config
shared/nvim/: init.vim
shared/powerline/colorschemes/tmux/: default.json
shared/powerline/colorschemes/wm/: default.json
shared/rofi/: config
shared/scripts/: rclone-mount  rclone-unmount
shared/systemd/: gmedia-find.service  gmedia-rclone.service  gmedia.service
shared/termite/: config
shared/tmux/: tmux.conf
shared/vim/: powerline.rc  vimrc
tmux/: tmux.conf
vim/: vimrc
