[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Lalit Maganti", email = "lalitmaganti@gmail.com"},
]
dependencies = [
    "docopt>=0.6.2",
    "ruamel-yaml>=0.17.21",
    "jinja2>=3.1.2",
    "python-magic>=0.4.27",
    "requests>=2.28.2",
    "packaging>=23.0",
    "toml>=0.10.2",
    "distro>=1.8.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
[tool.pdm.dev-dependencies]
dev = []

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
