[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Lalit Maganti", email = "lalitmaganti@gmail.com"},
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
[tool.pdm.dev-dependencies]
dev = []

[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["Lalit Maganti <lalitmaganti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
docopt = "^0.6.2"
distro = "^1.8.0"
ruamel-yaml = "^0.18.5"
tomli-w = "^1.0.0"
requests = "^2.32.0"
packaging = "^23.2"
jinja2 = "^3.1.2"
python-magic = "^0.4.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
