[project]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = [
    {name = "Lalit Maganti", email = "lalitmaganti@gmail.com"},
]
requires-python = "<4.0,>=3.11"
license = {text = "MIT"}
dependencies = [
    "docopt<1.0.0,>=0.6.2",
    "distro<2.0.0,>=1.9.0",
    "ruamel-yaml<1.0.0,>=0.18.5",
    "tomli-w>=1.0.0,<2.0.0",
    "requests<3.0.0,>=2.32.3",
    "packaging<25.0,>=24.1",
    "jinja2<4.0.0,>=3.1.4",
    "python-magic<1.0.0,>=0.4.27",
    "tomli>=2.2.1",
]
readme = "README.md"

[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
[tool.pdm.dev-dependencies]
dev = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
